updated logic to include db using TypeOrm

--- a/sveltkit-demo/.gitignore
+++ b/sveltkit-demo/.gitignore
@@ -21,3 +21,9 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# docker compose volumes
+data
+logs
+.pnpm-store
+.svelte-kit
