--- a/sveltkit-demo/package.json
+++ b/sveltkit-demo/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/node": "^22.13.5",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
@@ -41,6 +42,9 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.8",
-		"tailwindcss": "^4.0.8"
+		"pg": "^8.13.3",
+		"reflect-metadata": "^0.2.2",
+		"tailwindcss": "^4.0.8",
+		"typeorm": "^0.3.20"
 	}
 }
